# Croissant

./: .gitignore  CMakeLists.txt  README.md
cmake/: addTest.cmake
lib/: CMakeLists.txt
lib/Croissant/: Comparaison.hpp  Croissant.hpp  DisableWarning.hpp  EqualityComparison.hpp  LessComparison.hpp  LessOrEqualComparison.hpp  MoreComparaison.hpp  MoreComparison.hpp  MoreOrEqualComparaison.hpp  MoreOrEqualComparison.hpp  Number.hpp  OperatorsConcept.hpp  Result.hpp  Tags.hpp  UsefulConcepts.hpp  Value.hpp
single_header/: Croissant.hpp
test/: CMakeLists.txt
test/first/: first_test.cpp
test/number/: CMakeLists.txt  number_test.cpp
